Fix wrapped code padding bottom

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -102,6 +102,10 @@ div.highlight {
     overflow-x: initial;
 }
 
+.wrap-code div.highlight {
+  padding-bottom: 10px;
+}
+
 .join-code-blocks {
   // Select first joined block of sequence
   &:not(.join-code-blocks + .join-code-blocks) > div.highlight {
